Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="relative path to CSS file">
+<link rel="stylesheet" href="./style.css">
 <!DOCTYPE html>
 <html>
   <head>
